--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
 uvicorn
 pillow
-torch
+torch==2.2.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 numpy
 requests
 pydantic
